name:                n2o
version:             0.1.0.0
license:             MIT
Synopsis:   WebSocket Application Server
description:          web framework
license-file:        LICENSE
author:              Andrii Melnykov
maintainer:          andy.melnikov@gmail.com
category:            Web
build-type:          Simple
extra-source-files:
  README.md
  src/Network/N2O.hs
  src/Network/N2O/PubSub.hs
cabal-version:       >=1.10
source-repository head
  type:              git
  location:          git://github.com/nponeccop/n2o.hs

library
  ghc-options: -W
  build-depends:
      base >= 4.7 && < 5
    , websockets
    , text
    , transformers
    , bert
    , binary
    , bytestring
    , ixset
  exposed-modules:
    Network.N2O,
    Network.N2O.PubSub
  hs-source-dirs:      src
  default-language:    Haskell2010

executable n2o
  main-is: n2o.hs
  ghc-options: -W
  build-depends:
      base >= 4.7 && < 5
    , websockets
    , text
    , transformers
    , bert
    , binary
    , bytestring
    , ixset
  hs-source-dirs:      src
  default-language:    Haskell2010
