name:                n2o
version:             0.1.0.0
license:             MIT
Synopsis:   WebSocket Application Server
description:          web framework
license-file:        LICENSE
author:              Andrii Melnykov
maintainer:          andy.melnikov@gmail.com
category:            Web
build-type:          Simple
extra-source-files:
  README.md
  src/Network/N2O.hs
  src/Network/N2O/Jq.hs
  src/Network/N2O/PubSub.hs
cabal-version:       >=1.10
source-repository head
  type:              git
  location:          git://github.com/nponeccop/n2o.hs

library
  ghc-options: -W
  build-depends:
      base >= 4.7 && < 5
    , websockets
    , text
    , bert
    , binary
    , bytestring
    , ixset
    , HJavaScript
    , nonce
  exposed-modules:
      Network.N2O
    , Network.N2O.Jq
    , Network.N2O.PubSub
    , Network.N2O.Session
  hs-source-dirs:      src
  default-language:    Haskell2010

executable n2o-chat
  main-is: server.hs
  ghc-options: -W
  build-depends:
      base >= 4.7 && < 5
    , n2o
    , text
    , bert
    , ixset
    , HJavaScript
  hs-source-dirs:      sample
  default-language:    Haskell2010
